--- a/oefening.html
+++ b/oefening.html
@@ -4496,6 +4496,297 @@
                 correctAnswer: "stopten",
                 uitgang: "ten",
                 explanation: "Verleden tijd meervoud: stam + 'ten' (p zit in 't ex-kofschip).",
+            },
+
+            // VOLTOOID DEELWOORD - Alle onderwerpvormen per werkwoord
+            // PRATEN (4 zinnen)
+            {
+                sentence: "Ik heb lang [...] met de manager",
+                werkwoord: "praten",
+                onderwerp: "ik",
+                onderwerpDisplay: "ik (enkelvoud)",
+                isPersoonsvorm: false,
+                tijd: null,
+                type: "voltooid",
+                isSterk: false,
+                stam: "praat",
+                correctAnswer: "gepraat",
+                uitgang: null,
+                explanation: "Voltooid deelwoord: ge- + stam 'praat' (eindigt al op t, dus alleen 'gepraat').",
+            },
+            {
+                sentence: "Jij hebt altijd zo snel [...]",
+                werkwoord: "praten",
+                onderwerp: "jij",
+                onderwerpDisplay: "jij (enkelvoud)",
+                isPersoonsvorm: false,
+                tijd: null,
+                type: "voltooid",
+                isSterk: false,
+                stam: "praat",
+                correctAnswer: "gepraat",
+                uitgang: null,
+                explanation: "Voltooid deelwoord: ge- + stam 'praat' (eindigt al op t, dus alleen 'gepraat').",
+            },
+            {
+                sentence: "Hij heeft nooit [...] over zijn gevoelens",
+                werkwoord: "praten",
+                onderwerp: "hij",
+                onderwerpDisplay: "hij (enkelvoud)",
+                isPersoonsvorm: false,
+                tijd: null,
+                type: "voltooid",
+                isSterk: false,
+                stam: "praat",
+                correctAnswer: "gepraat",
+                uitgang: null,
+                explanation: "Voltooid deelwoord: ge- + stam 'praat' (eindigt al op t, dus alleen 'gepraat').",
+            },
+            {
+                sentence: "Wij hebben uren [...]",
+                werkwoord: "praten",
+                onderwerp: "wij",
+                onderwerpDisplay: "wij (meervoud)",
+                isPersoonsvorm: false,
+                tijd: null,
+                type: "voltooid",
+                isSterk: false,
+                stam: "praat",
+                correctAnswer: "gepraat",
+                uitgang: null,
+                explanation: "Voltooid deelwoord: ge- + stam 'praat' (eindigt al op t, dus alleen 'gepraat').",
+            },
+
+            // LACHEN (4 zinnen)
+            {
+                sentence: "Ik heb me kapot [...]",
+                werkwoord: "lachen",
+                onderwerp: "ik",
+                onderwerpDisplay: "ik (enkelvoud)",
+                isPersoonsvorm: false,
+                tijd: null,
+                type: "voltooid",
+                isSterk: false,
+                stam: "lach",
+                correctAnswer: "gelachen",
+                uitgang: null,
+                explanation: "Voltooid deelwoord: ge- + stam 'lach' + en (ch zit in 't ex-fokschaap maar krijgt +en).",
+            },
+            {
+                sentence: "Jij hebt het hardst [...]",
+                werkwoord: "lachen",
+                onderwerp: "jij",
+                onderwerpDisplay: "jij (enkelvoud)",
+                isPersoonsvorm: false,
+                tijd: null,
+                type: "voltooid",
+                isSterk: false,
+                stam: "lach",
+                correctAnswer: "gelachen",
+                uitgang: null,
+                explanation: "Voltooid deelwoord: ge- + stam 'lach' + en (ch zit in 't ex-fokschaap maar krijgt +en).",
+            },
+            {
+                sentence: "Zij heeft om mijn fout [...]",
+                werkwoord: "lachen",
+                onderwerp: "zij",
+                onderwerpDisplay: "zij (enkelvoud)",
+                isPersoonsvorm: false,
+                tijd: null,
+                type: "voltooid",
+                isSterk: false,
+                stam: "lach",
+                correctAnswer: "gelachen",
+                uitgang: null,
+                explanation: "Voltooid deelwoord: ge- + stam 'lach' + en (ch zit in 't ex-fokschaap maar krijgt +en).",
+            },
+            {
+                sentence: "Jullie hebben de hele tijd [...]",
+                werkwoord: "lachen",
+                onderwerp: "jullie",
+                onderwerpDisplay: "jullie (meervoud)",
+                isPersoonsvorm: false,
+                tijd: null,
+                type: "voltooid",
+                isSterk: false,
+                stam: "lach",
+                correctAnswer: "gelachen",
+                uitgang: null,
+                explanation: "Voltooid deelwoord: ge- + stam 'lach' + en (ch zit in 't ex-fokschaap maar krijgt +en).",
+            },
+
+            // KOKEN (4 zinnen)
+            {
+                sentence: "Ik heb vannacht [...]",
+                werkwoord: "koken",
+                onderwerp: "ik",
+                onderwerpDisplay: "ik (enkelvoud)",
+                isPersoonsvorm: false,
+                tijd: null,
+                type: "voltooid",
+                isSterk: false,
+                stam: "kook",
+                correctAnswer: "gekookt",
+                uitgang: null,
+                explanation: "Voltooid deelwoord: ge- + stam 'kook' + t (k zit in 't ex-fokschaap → 't').",
+            },
+            {
+                sentence: "Jij hebt perfect [...]",
+                werkwoord: "koken",
+                onderwerp: "jij",
+                onderwerpDisplay: "jij (enkelvoud)",
+                isPersoonsvorm: false,
+                tijd: null,
+                type: "voltooid",
+                isSterk: false,
+                stam: "kook",
+                correctAnswer: "gekookt",
+                uitgang: null,
+                explanation: "Voltooid deelwoord: ge- + stam 'kook' + t (k zit in 't ex-fokschaap → 't').",
+            },
+            {
+                sentence: "De chef heeft een speciaal menu [...]",
+                werkwoord: "koken",
+                onderwerp: "hij",
+                onderwerpDisplay: "hij (enkelvoud)",
+                isPersoonsvorm: false,
+                tijd: null,
+                type: "voltooid",
+                isSterk: false,
+                stam: "kook",
+                correctAnswer: "gekookt",
+                uitgang: null,
+                explanation: "Voltooid deelwoord: ge- + stam 'kook' + t (k zit in 't ex-fokschaap → 't').",
+            },
+            {
+                sentence: "Wij hebben samen [...]",
+                werkwoord: "koken",
+                onderwerp: "wij",
+                onderwerpDisplay: "wij (meervoud)",
+                isPersoonsvorm: false,
+                tijd: null,
+                type: "voltooid",
+                isSterk: false,
+                stam: "kook",
+                correctAnswer: "gekookt",
+                uitgang: null,
+                explanation: "Voltooid deelwoord: ge- + stam 'kook' + t (k zit in 't ex-fokschaap → 't').",
+            },
+
+            // FIETSEN (4 zinnen)
+            {
+                sentence: "Ik heb vandaag tien kilometer [...]",
+                werkwoord: "fietsen",
+                onderwerp: "ik",
+                onderwerpDisplay: "ik (enkelvoud)",
+                isPersoonsvorm: false,
+                tijd: null,
+                type: "voltooid",
+                isSterk: false,
+                stam: "fiets",
+                correctAnswer: "gefietst",
+                uitgang: null,
+                explanation: "Voltooid deelwoord: ge- + stam 'fiets' + t (s zit in 't ex-fokschaap → 't').",
+            },
+            {
+                sentence: "Jij hebt te hard [...]",
+                werkwoord: "fietsen",
+                onderwerp: "jij",
+                onderwerpDisplay: "jij (enkelvoud)",
+                isPersoonsvorm: false,
+                tijd: null,
+                type: "voltooid",
+                isSterk: false,
+                stam: "fiets",
+                correctAnswer: "gefietst",
+                uitgang: null,
+                explanation: "Voltooid deelwoord: ge- + stam 'fiets' + t (s zit in 't ex-fokschaap → 't').",
+            },
+            {
+                sentence: "Hij heeft zonder handen [...]",
+                werkwoord: "fietsen",
+                onderwerp: "hij",
+                onderwerpDisplay: "hij (enkelvoud)",
+                isPersoonsvorm: false,
+                tijd: null,
+                type: "voltooid",
+                isSterk: false,
+                stam: "fiets",
+                correctAnswer: "gefietst",
+                uitgang: null,
+                explanation: "Voltooid deelwoord: ge- + stam 'fiets' + t (s zit in 't ex-fokschaap → 't').",
+            },
+            {
+                sentence: "Zij hebben langs de kust [...]",
+                werkwoord: "fietsen",
+                onderwerp: "zij",
+                onderwerpDisplay: "zij (meervoud)",
+                isPersoonsvorm: false,
+                tijd: null,
+                type: "voltooid",
+                isSterk: false,
+                stam: "fiets",
+                correctAnswer: "gefietst",
+                uitgang: null,
+                explanation: "Voltooid deelwoord: ge- + stam 'fiets' + t (s zit in 't ex-fokschaap → 't').",
+            },
+
+            // PAKKEN (4 zinnen)
+            {
+                sentence: "Ik heb mijn koffer al [...]",
+                werkwoord: "pakken",
+                onderwerp: "ik",
+                onderwerpDisplay: "ik (enkelvoud)",
+                isPersoonsvorm: false,
+                tijd: null,
+                type: "voltooid",
+                isSterk: false,
+                stam: "pak",
+                correctAnswer: "gepakt",
+                uitgang: null,
+                explanation: "Voltooid deelwoord: ge- + stam 'pak' + t (k zit in 't ex-fokschaap → 't').",
+            },
+            {
+                sentence: "Jij hebt het beste stuk [...]",
+                werkwoord: "pakken",
+                onderwerp: "jij",
+                onderwerpDisplay: "jij (enkelvoud)",
+                isPersoonsvorm: false,
+                tijd: null,
+                type: "voltooid",
+                isSterk: false,
+                stam: "pak",
+                correctAnswer: "gepakt",
+                uitgang: null,
+                explanation: "Voltooid deelwoord: ge- + stam 'pak' + t (k zit in 't ex-fokschaap → 't').",
+            },
+            {
+                sentence: "Ze heeft haar tas [...]",
+                werkwoord: "pakken",
+                onderwerp: "zij",
+                onderwerpDisplay: "zij (enkelvoud)",
+                isPersoonsvorm: false,
+                tijd: null,
+                type: "voltooid",
+                isSterk: false,
+                stam: "pak",
+                correctAnswer: "gepakt",
+                uitgang: null,
+                explanation: "Voltooid deelwoord: ge- + stam 'pak' + t (k zit in 't ex-fokschaap → 't').",
+            },
+            {
+                sentence: "Jullie hebben veel bagage [...]",
+                werkwoord: "pakken",
+                onderwerp: "jullie",
+                onderwerpDisplay: "jullie (meervoud)",
+                isPersoonsvorm: false,
+                tijd: null,
+                type: "voltooid",
+                isSterk: false,
+                stam: "pak",
+                correctAnswer: "gepakt",
+                uitgang: null,
+                explanation: "Voltooid deelwoord: ge- + stam 'pak' + t (k zit in 't ex-fokschaap → 't').",
             }
         ];
 
