--- a/oefening.html
+++ b/oefening.html
@@ -4787,6 +4787,296 @@
                 correctAnswer: "gepakt",
                 uitgang: null,
                 explanation: "Voltooid deelwoord: ge- + stam 'pak' + t (k zit in 't ex-fokschaap → 't').",
+            },
+
+            // HOPEN (4 zinnen)
+            {
+                sentence: "Ik heb op beter nieuws [...]",
+                werkwoord: "hopen",
+                onderwerp: "ik",
+                onderwerpDisplay: "ik (enkelvoud)",
+                isPersoonsvorm: false,
+                tijd: null,
+                type: "voltooid",
+                isSterk: false,
+                stam: "hoop",
+                correctAnswer: "gehoopt",
+                uitgang: null,
+                explanation: "Voltooid deelwoord: ge- + stam 'hoop' + t (p zit in 't ex-fokschaap → 't').",
+            },
+            {
+                sentence: "Jij hebt op een wonder [...]",
+                werkwoord: "hopen",
+                onderwerp: "jij",
+                onderwerpDisplay: "jij (enkelvoud)",
+                isPersoonsvorm: false,
+                tijd: null,
+                type: "voltooid",
+                isSterk: false,
+                stam: "hoop",
+                correctAnswer: "gehoopt",
+                uitgang: null,
+                explanation: "Voltooid deelwoord: ge- + stam 'hoop' + t (p zit in 't ex-fokschaap → 't').",
+            },
+            {
+                sentence: "Hij heeft altijd [...] op succes",
+                werkwoord: "hopen",
+                onderwerp: "hij",
+                onderwerpDisplay: "hij (enkelvoud)",
+                isPersoonsvorm: false,
+                tijd: null,
+                type: "voltooid",
+                isSterk: false,
+                stam: "hoop",
+                correctAnswer: "gehoopt",
+                uitgang: null,
+                explanation: "Voltooid deelwoord: ge- + stam 'hoop' + t (p zit in 't ex-fokschaap → 't').",
+            },
+            {
+                sentence: "Wij hebben tevergeefs [...]",
+                werkwoord: "hopen",
+                onderwerp: "wij",
+                onderwerpDisplay: "wij (meervoud)",
+                isPersoonsvorm: false,
+                tijd: null,
+                type: "voltooid",
+                isSterk: false,
+                stam: "hoop",
+                correctAnswer: "gehoopt",
+                uitgang: null,
+                explanation: "Voltooid deelwoord: ge- + stam 'hoop' + t (p zit in 't ex-fokschaap → 't').",
+            },
+
+            // FAXEN (4 zinnen)
+            {
+                sentence: "Ik heb de documenten [...]",
+                werkwoord: "faxen",
+                onderwerp: "ik",
+                onderwerpDisplay: "ik (enkelvoud)",
+                isPersoonsvorm: false,
+                tijd: null,
+                type: "voltooid",
+                isSterk: false,
+                stam: "fax",
+                correctAnswer: "gefaxt",
+                uitgang: null,
+                explanation: "Voltooid deelwoord: ge- + stam 'fax' + t (x zit in 't ex-fokschaap → 't').",
+            },
+            {
+                sentence: "Jij hebt het verkeerde nummer [...]",
+                werkwoord: "faxen",
+                onderwerp: "jij",
+                onderwerpDisplay: "jij (enkelvoud)",
+                isPersoonsvorm: false,
+                tijd: null,
+                type: "voltooid",
+                isSterk: false,
+                stam: "fax",
+                correctAnswer: "gefaxt",
+                uitgang: null,
+                explanation: "Voltooid deelwoord: ge- + stam 'fax' + t (x zit in 't ex-fokschaap → 't').",
+            },
+            {
+                sentence: "De secretaresse heeft alles [...]",
+                werkwoord: "faxen",
+                onderwerp: "zij",
+                onderwerpDisplay: "zij (enkelvoud)",
+                isPersoonsvorm: false,
+                tijd: null,
+                type: "voltooid",
+                isSterk: false,
+                stam: "fax",
+                correctAnswer: "gefaxt",
+                uitgang: null,
+                explanation: "Voltooid deelwoord: ge- + stam 'fax' + t (x zit in 't ex-fokschaap → 't').",
+            },
+            {
+                sentence: "Jullie hebben de bestelling [...]",
+                werkwoord: "faxen",
+                onderwerp: "jullie",
+                onderwerpDisplay: "jullie (meervoud)",
+                isPersoonsvorm: false,
+                tijd: null,
+                type: "voltooid",
+                isSterk: false,
+                stam: "fax",
+                correctAnswer: "gefaxt",
+                uitgang: null,
+                explanation: "Voltooid deelwoord: ge- + stam 'fax' + t (x zit in 't ex-fokschaap → 't').",
+            },
+
+            // MIXEN (4 zinnen)
+            {
+                sentence: "Ik heb de muziek voor het feest [...]",
+                werkwoord: "mixen",
+                onderwerp: "ik",
+                onderwerpDisplay: "ik (enkelvoud)",
+                isPersoonsvorm: false,
+                tijd: null,
+                type: "voltooid",
+                isSterk: false,
+                stam: "mix",
+                correctAnswer: "gemixt",
+                uitgang: null,
+                explanation: "Voltooid deelwoord: ge- + stam 'mix' + t (x zit in 't ex-fokschaap → 't').",
+            },
+            {
+                sentence: "Jij hebt de kleuren mooi [...]",
+                werkwoord: "mixen",
+                onderwerp: "jij",
+                onderwerpDisplay: "jij (enkelvoud)",
+                isPersoonsvorm: false,
+                tijd: null,
+                type: "voltooid",
+                isSterk: false,
+                stam: "mix",
+                correctAnswer: "gemixt",
+                uitgang: null,
+                explanation: "Voltooid deelwoord: ge- + stam 'mix' + t (x zit in 't ex-fokschaap → 't').",
+            },
+            {
+                sentence: "De DJ heeft verschillende stijlen [...]",
+                werkwoord: "mixen",
+                onderwerp: "hij",
+                onderwerpDisplay: "hij (enkelvoud)",
+                isPersoonsvorm: false,
+                tijd: null,
+                type: "voltooid",
+                isSterk: false,
+                stam: "mix",
+                correctAnswer: "gemixt",
+                uitgang: null,
+                explanation: "Voltooid deelwoord: ge- + stam 'mix' + t (x zit in 't ex-fokschaap → 't').",
+            },
+            {
+                sentence: "Wij hebben alles door elkaar [...]",
+                werkwoord: "mixen",
+                onderwerp: "wij",
+                onderwerpDisplay: "wij (meervoud)",
+                isPersoonsvorm: false,
+                tijd: null,
+                type: "voltooid",
+                isSterk: false,
+                stam: "mix",
+                correctAnswer: "gemixt",
+                uitgang: null,
+                explanation: "Voltooid deelwoord: ge- + stam 'mix' + t (x zit in 't ex-fokschaap → 't').",
+            },
+
+            // BOXEN (4 zinnen)
+            {
+                sentence: "Ik heb drie rondes [...]",
+                werkwoord: "boxen",
+                onderwerp: "ik",
+                onderwerpDisplay: "ik (enkelvoud)",
+                isPersoonsvorm: false,
+                tijd: null,
+                type: "voltooid",
+                isSterk: false,
+                stam: "box",
+                correctAnswer: "geboxt",
+                uitgang: null,
+                explanation: "Voltooid deelwoord: ge- + stam 'box' + t (x zit in 't ex-fokschaap → 't').",
+            },
+            {
+                sentence: "Jij hebt goed [...]",
+                werkwoord: "boxen",
+                onderwerp: "jij",
+                onderwerpDisplay: "jij (enkelvoud)",
+                isPersoonsvorm: false,
+                tijd: null,
+                type: "voltooid",
+                isSterk: false,
+                stam: "box",
+                correctAnswer: "geboxt",
+                uitgang: null,
+                explanation: "Voltooid deelwoord: ge- + stam 'box' + t (x zit in 't ex-fokschaap → 't').",
+            },
+            {
+                sentence: "Mijn broer heeft voor het eerst [...]",
+                werkwoord: "boxen",
+                onderwerp: "hij",
+                onderwerpDisplay: "hij (enkelvoud)",
+                isPersoonsvorm: false,
+                tijd: null,
+                type: "voltooid",
+                isSterk: false,
+                stam: "box",
+                correctAnswer: "geboxt",
+                uitgang: null,
+                explanation: "Voltooid deelwoord: ge- + stam 'box' + t (x zit in 't ex-fokschaap → 't').",
+            },
+            {
+                sentence: "Zij hebben tegen elkaar [...]",
+                werkwoord: "boxen",
+                onderwerp: "zij",
+                onderwerpDisplay: "zij (meervoud)",
+                isPersoonsvorm: false,
+                tijd: null,
+                type: "voltooid",
+                isSterk: false,
+                stam: "box",
+                correctAnswer: "geboxt",
+                uitgang: null,
+                explanation: "Voltooid deelwoord: ge- + stam 'box' + t (x zit in 't ex-fokschaap → 't').",
+            },
+
+            // FIXEN (4 zinnen)
+            {
+                sentence: "Ik heb het probleem [...]",
+                werkwoord: "fixen",
+                onderwerp: "ik",
+                onderwerpDisplay: "ik (enkelvoud)",
+                isPersoonsvorm: false,
+                tijd: null,
+                type: "voltooid",
+                isSterk: false,
+                stam: "fix",
+                correctAnswer: "gefixt",
+                uitgang: null,
+                explanation: "Voltooid deelwoord: ge- + stam 'fix' + t (x zit in 't ex-fokschaap → 't').",
+            },
+            {
+                sentence: "Jij hebt mijn laptop [...]",
+                werkwoord: "fixen",
+                onderwerp: "jij",
+                onderwerpDisplay: "jij (enkelvoud)",
+                isPersoonsvorm: false,
+                tijd: null,
+                type: "voltooid",
+                isSterk: false,
+                stam: "fix",
+                correctAnswer: "gefixt",
+                uitgang: null,
+                explanation: "Voltooid deelwoord: ge- + stam 'fix' + t (x zit in 't ex-fokschaap → 't').",
+            },
+            {
+                sentence: "De technicus heeft de storing [...]",
+                werkwoord: "fixen",
+                onderwerp: "hij",
+                onderwerpDisplay: "hij (enkelvoud)",
+                isPersoonsvorm: false,
+                tijd: null,
+                type: "voltooid",
+                isSterk: false,
+                stam: "fix",
+                correctAnswer: "gefixt",
+                uitgang: null,
+                explanation: "Voltooid deelwoord: ge- + stam 'fix' + t (x zit in 't ex-fokschaap → 't').",
+            },
+            {
+                sentence: "Jullie hebben alle bugs [...]",
+                werkwoord: "fixen",
+                onderwerp: "jullie",
+                onderwerpDisplay: "jullie (meervoud)",
+                isPersoonsvorm: false,
+                tijd: null,
+                type: "voltooid",
+                isSterk: false,
+                stam: "fix",
+                correctAnswer: "gefixt",
+                uitgang: null,
+                explanation: "Voltooid deelwoord: ge- + stam 'fix' + t (x zit in 't ex-fokschaap → 't').",
             }
         ];
 
