--- a/oefening.html
+++ b/oefening.html
@@ -5077,6 +5077,296 @@
                 correctAnswer: "gefixt",
                 uitgang: null,
                 explanation: "Voltooid deelwoord: ge- + stam 'fix' + t (x zit in 't ex-fokschaap → 't').",
+            },
+
+            // SWITCHEN (4 zinnen)
+            {
+                sentence: "Ik heb van kanaal [...]",
+                werkwoord: "switchen",
+                onderwerp: "ik",
+                onderwerpDisplay: "ik (enkelvoud)",
+                isPersoonsvorm: false,
+                tijd: null,
+                type: "voltooid",
+                isSterk: false,
+                stam: "switch",
+                correctAnswer: "geswitcht",
+                uitgang: null,
+                explanation: "Voltooid deelwoord: ge- + stam 'switch' + t (ch zit in 't ex-fokschaap → 't').",
+            },
+            {
+                sentence: "Jij hebt van baan [...]",
+                werkwoord: "switchen",
+                onderwerp: "jij",
+                onderwerpDisplay: "jij (enkelvoud)",
+                isPersoonsvorm: false,
+                tijd: null,
+                type: "voltooid",
+                isSterk: false,
+                stam: "switch",
+                correctAnswer: "geswitcht",
+                uitgang: null,
+                explanation: "Voltooid deelwoord: ge- + stam 'switch' + t (ch zit in 't ex-fokschaap → 't').",
+            },
+            {
+                sentence: "Hij heeft tussen apps [...]",
+                werkwoord: "switchen",
+                onderwerp: "hij",
+                onderwerpDisplay: "hij (enkelvoud)",
+                isPersoonsvorm: false,
+                tijd: null,
+                type: "voltooid",
+                isSterk: false,
+                stam: "switch",
+                correctAnswer: "geswitcht",
+                uitgang: null,
+                explanation: "Voltooid deelwoord: ge- + stam 'switch' + t (ch zit in 't ex-fokschaap → 't').",
+            },
+            {
+                sentence: "Wij hebben van provider [...]",
+                werkwoord: "switchen",
+                onderwerp: "wij",
+                onderwerpDisplay: "wij (meervoud)",
+                isPersoonsvorm: false,
+                tijd: null,
+                type: "voltooid",
+                isSterk: false,
+                stam: "switch",
+                correctAnswer: "geswitcht",
+                uitgang: null,
+                explanation: "Voltooid deelwoord: ge- + stam 'switch' + t (ch zit in 't ex-fokschaap → 't').",
+            },
+
+            // CHECKEN (4 zinnen)
+            {
+                sentence: "Ik heb alles nog een keer [...]",
+                werkwoord: "checken",
+                onderwerp: "ik",
+                onderwerpDisplay: "ik (enkelvoud)",
+                isPersoonsvorm: false,
+                tijd: null,
+                type: "voltooid",
+                isSterk: false,
+                stam: "check",
+                correctAnswer: "gecheckt",
+                uitgang: null,
+                explanation: "Voltooid deelwoord: ge- + stam 'check' + t (k zit in 't ex-fokschaap → 't').",
+            },
+            {
+                sentence: "Jij hebt je mail niet [...]",
+                werkwoord: "checken",
+                onderwerp: "jij",
+                onderwerpDisplay: "jij (enkelvoud)",
+                isPersoonsvorm: false,
+                tijd: null,
+                type: "voltooid",
+                isSterk: false,
+                stam: "check",
+                correctAnswer: "gecheckt",
+                uitgang: null,
+                explanation: "Voltooid deelwoord: ge- + stam 'check' + t (k zit in 't ex-fokschaap → 't').",
+            },
+            {
+                sentence: "De docent heeft alle toetsen [...]",
+                werkwoord: "checken",
+                onderwerp: "hij",
+                onderwerpDisplay: "hij (enkelvoud)",
+                isPersoonsvorm: false,
+                tijd: null,
+                type: "voltooid",
+                isSterk: false,
+                stam: "check",
+                correctAnswer: "gecheckt",
+                uitgang: null,
+                explanation: "Voltooid deelwoord: ge- + stam 'check' + t (k zit in 't ex-fokschaap → 't').",
+            },
+            {
+                sentence: "Jullie hebben de antwoorden [...]",
+                werkwoord: "checken",
+                onderwerp: "jullie",
+                onderwerpDisplay: "jullie (meervoud)",
+                isPersoonsvorm: false,
+                tijd: null,
+                type: "voltooid",
+                isSterk: false,
+                stam: "check",
+                correctAnswer: "gecheckt",
+                uitgang: null,
+                explanation: "Voltooid deelwoord: ge- + stam 'check' + t (k zit in 't ex-fokschaap → 't').",
+            },
+
+            // PUSHEN (4 zinnen)
+            {
+                sentence: "Ik heb mezelf te ver [...]",
+                werkwoord: "pushen",
+                onderwerp: "ik",
+                onderwerpDisplay: "ik (enkelvoud)",
+                isPersoonsvorm: false,
+                tijd: null,
+                type: "voltooid",
+                isSterk: false,
+                stam: "push",
+                correctAnswer: "gepusht",
+                uitgang: null,
+                explanation: "Voltooid deelwoord: ge- + stam 'push' + t (sh/s zit in 't ex-fokschaap → 't').",
+            },
+            {
+                sentence: "Jij hebt hard [...]",
+                werkwoord: "pushen",
+                onderwerp: "jij",
+                onderwerpDisplay: "jij (enkelvoud)",
+                isPersoonsvorm: false,
+                tijd: null,
+                type: "voltooid",
+                isSterk: false,
+                stam: "push",
+                correctAnswer: "gepusht",
+                uitgang: null,
+                explanation: "Voltooid deelwoord: ge- + stam 'push' + t (sh/s zit in 't ex-fokschaap → 't').",
+            },
+            {
+                sentence: "De coach heeft het team [...]",
+                werkwoord: "pushen",
+                onderwerp: "hij",
+                onderwerpDisplay: "hij (enkelvoud)",
+                isPersoonsvorm: false,
+                tijd: null,
+                type: "voltooid",
+                isSterk: false,
+                stam: "push",
+                correctAnswer: "gepusht",
+                uitgang: null,
+                explanation: "Voltooid deelwoord: ge- + stam 'push' + t (sh/s zit in 't ex-fokschaap → 't').",
+            },
+            {
+                sentence: "Wij hebben elkaar [...]",
+                werkwoord: "pushen",
+                onderwerp: "wij",
+                onderwerpDisplay: "wij (meervoud)",
+                isPersoonsvorm: false,
+                tijd: null,
+                type: "voltooid",
+                isSterk: false,
+                stam: "push",
+                correctAnswer: "gepusht",
+                uitgang: null,
+                explanation: "Voltooid deelwoord: ge- + stam 'push' + t (sh/s zit in 't ex-fokschaap → 't').",
+            },
+
+            // PASSEN (4 zinnen)
+            {
+                sentence: "Ik heb verschillende maten [...]",
+                werkwoord: "passen",
+                onderwerp: "ik",
+                onderwerpDisplay: "ik (enkelvoud)",
+                isPersoonsvorm: false,
+                tijd: null,
+                type: "voltooid",
+                isSterk: false,
+                stam: "pas",
+                correctAnswer: "gepast",
+                uitgang: null,
+                explanation: "Voltooid deelwoord: ge- + stam 'pas' + t (s zit in 't ex-fokschaap → 't').",
+            },
+            {
+                sentence: "Jij hebt perfect in het team [...]",
+                werkwoord: "passen",
+                onderwerp: "jij",
+                onderwerpDisplay: "jij (enkelvoud)",
+                isPersoonsvorm: false,
+                tijd: null,
+                type: "voltooid",
+                isSterk: false,
+                stam: "pas",
+                correctAnswer: "gepast",
+                uitgang: null,
+                explanation: "Voltooid deelwoord: ge- + stam 'pas' + t (s zit in 't ex-fokschaap → 't').",
+            },
+            {
+                sentence: "De sleutel heeft in het slot [...]",
+                werkwoord: "passen",
+                onderwerp: "hij",
+                onderwerpDisplay: "hij (enkelvoud)",
+                isPersoonsvorm: false,
+                tijd: null,
+                type: "voltooid",
+                isSterk: false,
+                stam: "pas",
+                correctAnswer: "gepast",
+                uitgang: null,
+                explanation: "Voltooid deelwoord: ge- + stam 'pas' + t (s zit in 't ex-fokschaap → 't').",
+            },
+            {
+                sentence: "Zij hebben goed bij elkaar [...]",
+                werkwoord: "passen",
+                onderwerp: "zij",
+                onderwerpDisplay: "zij (meervoud)",
+                isPersoonsvorm: false,
+                tijd: null,
+                type: "voltooid",
+                isSterk: false,
+                stam: "pas",
+                correctAnswer: "gepast",
+                uitgang: null,
+                explanation: "Voltooid deelwoord: ge- + stam 'pas' + t (s zit in 't ex-fokschaap → 't').",
+            },
+
+            // POETSEN (4 zinnen)
+            {
+                sentence: "Ik heb mijn schoenen [...]",
+                werkwoord: "poetsen",
+                onderwerp: "ik",
+                onderwerpDisplay: "ik (enkelvoud)",
+                isPersoonsvorm: false,
+                tijd: null,
+                type: "voltooid",
+                isSterk: false,
+                stam: "poets",
+                correctAnswer: "gepoetst",
+                uitgang: null,
+                explanation: "Voltooid deelwoord: ge- + stam 'poets' + t (s zit in 't ex-fokschaap → 't').",
+            },
+            {
+                sentence: "Jij hebt de ramen [...]",
+                werkwoord: "poetsen",
+                onderwerp: "jij",
+                onderwerpDisplay: "jij (enkelvoud)",
+                isPersoonsvorm: false,
+                tijd: null,
+                type: "voltooid",
+                isSterk: false,
+                stam: "poets",
+                correctAnswer: "gepoetst",
+                uitgang: null,
+                explanation: "Voltooid deelwoord: ge- + stam 'poets' + t (s zit in 't ex-fokschaap → 't').",
+            },
+            {
+                sentence: "Mijn vader heeft zijn auto [...]",
+                werkwoord: "poetsen",
+                onderwerp: "hij",
+                onderwerpDisplay: "hij (enkelvoud)",
+                isPersoonsvorm: false,
+                tijd: null,
+                type: "voltooid",
+                isSterk: false,
+                stam: "poets",
+                correctAnswer: "gepoetst",
+                uitgang: null,
+                explanation: "Voltooid deelwoord: ge- + stam 'poets' + t (s zit in 't ex-fokschaap → 't').",
+            },
+            {
+                sentence: "Jullie hebben het hele huis [...]",
+                werkwoord: "poetsen",
+                onderwerp: "jullie",
+                onderwerpDisplay: "jullie (meervoud)",
+                isPersoonsvorm: false,
+                tijd: null,
+                type: "voltooid",
+                isSterk: false,
+                stam: "poets",
+                correctAnswer: "gepoetst",
+                uitgang: null,
+                explanation: "Voltooid deelwoord: ge- + stam 'poets' + t (s zit in 't ex-fokschaap → 't').",
             }
         ];
 
